# RustingEngine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  overview.md
compare/: CMakeLists.txt  Cargo.toml  compareCubes.cpp  compareThreeJs2.html  cubes_comp.rs  index.html  main.cpp  main.rs
src/: build.rs  lib.rs  main.rs  mainda.rs  scene_manager.rs  shapes.rs  testMain.rs  tests.rs  user_main.rs
src/core/: collisions.rs  material.rs  mod.rs  physics.rs  transform.rs
src/effects/: mod.rs
src/engine/: mod.rs
src/examples/: gltf_test.rs  mod.rs  native_texture.rs  physics.rs  rotate.rs  shaders.rs  stress_pbr.rs  stress_unlit.rs
src/geometry/: gltf_loader.rs  mod.rs
src/input/: mod.rs
src/renderer/: camera.rs  frustum.rs  mod.rs  pipeline.rs  render.rs  swapchain.rs
src/rendering/: camera.rs  compute_registry.rs  mod.rs  pipeline.rs  render.rs  shader_registry.rs  swapchain.rs
src/scene/: animation.rs  mod.rs  object.rs
src/shaders/: mod.rs
src/shaders/compute/: basic.glsl  cs_grid_build.comp  cull.comp  empty.glsl  full.comp  grid_build.comp  mid.comp  mod.rs  no_coll.comp  physics_simple.glsl
src/shaders/fragment/: debug.frag  emissive.frag  heavy.frag  mod.rs  pbr.frag  unlit.frag
src/shaders/vertex/: base.vert  mod.rs
src/shapes/: gltfLoader.rs  mod.rs
testModels/: 1kRustingSphere.gltf  Rustyball.gltf  chillGuy.gltf  chillGuyWithMat.gltf  cube.gltf  nomatSphere.gltf  rustingSphere.gltf
