[package]
name = "RustingEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
nalgebra = "0.34.1"
rand = "0.10.0"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
