[package]
name = "rusting_engine"
version = "0.1.0"
authors = ["Vasyl Trefilov <drenfor228@gmail.com>"]
edition = "2021"
description = "A high-performance Vulkano-based 3D engine with GPU physics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vasyl-Trefilov/RustingEngine"
readme = "README.md"
keywords = ["vulkan", "engine", "graphics", "physics", "gamedev"]
categories = ["rendering", "game-engines"]

[[bin]]
name = "user_main"
path = "src/user_main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
bytemuck = "1.25.0"
nalgebra = "0.34.1"
rand = "0.10.0"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.0"
rayon = "1.10"
gltf = "1.4.1"
smallvec = "1.15.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

